Fixed tooltip positioning. Made tooltips slightly transparent. Created separate classes for each offscreen arrow type. Refactored N2Matrix::_drawOffscreenArrows(). Added more inline docs to N2Arrow.js.

--- a/openmdao/visualization/n2_viewer/style/partition_tree.css
+++ b/openmdao/visualization/n2_viewer/style/partition_tree.css
@@ -280,4 +280,5 @@ div.offgrid {
   background-color: #fff;
   border: solid 1px #dfdfdf;
   position: absolute;
+  opacity: 0.7;
 }
